// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: none;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
        disabled=""
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
          disabled=""
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              disabled=""
              id="checkboxFieldMoscow"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
          disabled=""
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              disabled=""
              id="checkboxFieldVoronezh"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
          disabled=""
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              disabled=""
              id="checkboxFieldSamara"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #B0B5BD;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: none;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
      disabled=""
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
        disabled=""
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            disabled=""
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
        disabled=""
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            disabled=""
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
        disabled=""
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            disabled=""
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with label 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        Выберите города
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldMoscow"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldVoronezh"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldSamara"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      Выберите города
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 12px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldMoscow"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldVoronezh"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldSamara"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 12px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldMoscow"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Москва
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldVoronezh"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Воронеж
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <div
            class="c2 c3"
          >
            <input
              class="c4"
              id="checkboxFieldSamara"
              type="checkbox"
            />
            <div
              class="c5 c6"
            >
              <div
                aria-hidden="true"
                class="c7"
                focusable="false"
              />
            </div>
          </div>
          Самара
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: 'VTB Group UI',sans-serif;
  color: #23262D;
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c7 {
  pointer-events: none;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 16px;
}

fieldset[data-dimension='s'] .c2 {
  height: 16px;
}

.c6 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c6 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c4 ::-ms-check {
  display: none;
}

.c4:checked+.c5 {
  background-color: #0062FF;
  border: none;
}

.c4:disabled {
  pointer-events: none;
}

.c4:disabled+.c5 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c4:not(:checked)+.c5 >* {
  display: none;
}

.c4:hover:not(:disabled)::after,
.c4:focus:not(:disabled)+.c4:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c4:checked:disabled+.c5 {
  background-color: #A7C7FF;
  border: none;
}

.c4:checked:disabled+.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c4:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c3 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c1 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Москва
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Воронеж
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <div
          class="c2 c3"
        >
          <input
            class="c4"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c5 c6"
          >
            <div
              aria-hidden="true"
              class="c7"
              focusable="false"
            />
          </div>
        </div>
        Самара
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
